# local-english-trainer

./: .gitignore  AGENTS.md  README.md  package-lock.json  package.json  pytest.ini  version.json
backend/: desktop_sidecar.py
backend/app/: database_safety.py  db.py  desktop_security.py  desktop_storage.py  main.py  models.py  runtime_config.py  schemas.py  version.py
desktop/sidecar/: local_english_trainer_api.spec
docs/: AGENT_WORKFLOW.md  CODE_REVIEW_GUIDE.md  DESKTOP_ARCHITECTURE.md  INLINE_ANNOTATION_DESIGN.md  P2_25_PLATFORM_AND_SIDECAR_DESIGN.md  PROJECT_WORKFLOW.md  PROJECT_WORKFLOW_RETROSPECTIVE.md  STAGE_REPORT_GUIDE.md  TASK_PROMPT_TEMPLATES.md
frontend/: .npmrc  index.html  package-lock.json  package.json  vite.config.js
requirements/: desktop.in  dev.in  runtime.in
scripts/: build-sidecar.ps1  check-desktop-prerequisites.ps1  smoke-test-sidecar.ps1  smoke-test-tauri-sidecar-lifecycle.ps1  smoke-test-tauri-sidecar-proxy.ps1  smoke-test-tauri-sidecar-startup.ps1  stage-sidecar-resource.ps1  sync_version.py  test-stage-sidecar-resource.ps1
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: app_lifecycle.rs  learning_proxy.rs  lib.rs  main.rs  resource_probe.rs  sidecar.rs  sidecar_protocol.rs
tests/: test_database_safety.py  test_db_compatibility.py  test_desktop_security.py  test_desktop_sidecar.py  test_desktop_storage.py  test_practice_attempt_api.py  test_reading_annotations_api.py  test_runtime_config.py  test_sentence_api.py  test_version_contract.py  test_vocabulary_api.py
(+18 files in other folders)
