[package]
name = "local-english-trainer-desktop"
version = "0.1.0"
description = "Local English Trainer desktop shell"
authors = ["Local English Trainer"]
edition = "2024"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[build-dependencies]
tauri-build = { version = "=2.6.3", features = [] }

[dependencies]
tauri = { version = "=2.11.5", features = [] }
